# linear-accelerate

./: .gitignore  .travis.yml  CHANGELOG.markdown  CHANGELOG.md  LICENSE  README.markdown  README.md  linear-accelerate.cabal  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.yaml  stack-8.10.yaml  stack-8.2.yaml  stack-8.4.yaml  stack-8.6.yaml  stack-8.8.yaml
.github/workflows/: ci.yml
src/Data/Array/Accelerate/: Linear.hs
src/Data/Array/Accelerate/Linear/: Box.hs  Conjugate.hs  Epsilon.hs  Lift.hs  Matrix.hs  Metric.hs  Plucker.hs  Projection.hs  Quaternion.hs  Trace.hs  Type.hs  V0.hs  V1.hs  V2.hs  V3.hs  V4.hs  Vector.hs
src/Linear/: Accelerate.hs
src/Linear/Quaternion/: Simple.hs
tests/: doctests.hs
