name:          linear-accelerate
category:      Math, Algebra, Compilers/Interpreters, Concurrency, Data, Parallelism
version:       0.1
license:       BSD3
cabal-version: >= 1.8
license-file:  LICENSE
author:        Edward A. Kmett, Charles Durham
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/linear-accelerate/
bug-reports:   http://github.com/ekmett/linear-accelerate/issues
copyright:     Copyright (C) 2014 Edward A. Kmett
synopsis:      Instances to use linear vector spaces on accelerate backends
description:   Instances to use linear vector spaces on accelerate backends
build-type:    Custom
extra-source-files:
  .travis.yml
  .vim.custom
  travis/config
  CHANGELOG.markdown
  README.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/linear-accelerate.git

library
  build-depends:
    accelerate           >= 0.14  && < 0.15,
    base                 >= 4.5   && < 5,
    lens                 >= 4     && < 5,
    linear               >= 1.9   && < 2

  exposed-modules:
    Linear.Accelerate

  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs: src

-- Verify the results of the examples
{-
test-suite doctests
  type:           exitcode-stdio-1.0
  main-is:        doctests.hs
  ghc-options:    -Wall -Werror -threaded
  hs-source-dirs: tests
  build-depends:
    accelerate,
    base,
    directory >= 1.0 && < 1.3,
    doctest   >= 0.8 && < 0.10,
    filepath  >= 1.3 && < 1.4,
    lens,
    linear,
    simple-reflect >= 0.3.1
-}

