name:          linear-accelerate
category:      Math, Algebra, Compilers/Interpreters, Concurrency, Data, Parallelism
version:       0.3
license:       BSD3
cabal-version: >= 1.8
license-file:  LICENSE
author:        Edward A. Kmett, Charles Durham, Trevor L. McDonell
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/linear-accelerate/
bug-reports:   http://github.com/ekmett/linear-accelerate/issues
copyright:     Copyright (C) 2014 Edward A. Kmett
synopsis:      Lifting linear vector spaces into Accelerate
description:   Lifting linear vector spaces into Accelerate
build-type:    Custom
extra-source-files:
  .travis.yml
  .vim.custom
  travis/config
  CHANGELOG.markdown
  README.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/linear-accelerate.git

library
  build-depends:
    accelerate           >= 0.16,
    base                 >= 4.5   && < 5,
    lens                 >= 4     && < 5,
    linear               >= 1.10  && < 2

  exposed-modules:
    Data.Array.Accelerate.Linear
    Data.Array.Accelerate.Linear.Epsilon
    Data.Array.Accelerate.Linear.Metric
    Data.Array.Accelerate.Linear.Plucker
    Data.Array.Accelerate.Linear.Quaternion
    Data.Array.Accelerate.Linear.Type
    Data.Array.Accelerate.Linear.V0
    Data.Array.Accelerate.Linear.V1
    Data.Array.Accelerate.Linear.V2
    Data.Array.Accelerate.Linear.V3
    Data.Array.Accelerate.Linear.V4
    Data.Array.Accelerate.Linear.Vector

  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs: src

